# fast-socks5

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test_udp.py
bench/: bench.sh  proxychains.conf
examples/: client.rs  custom_auth_server.rs  router.rs  server.rs  simple_tcp_server.rs  udp_client.rs
src/: client.rs  client4.rs  lib.rs  server.rs  socks4.rs
src/socks4/: client.rs  mod.rs
src/util/: stream.rs  target_addr.rs
tests/: sock5_client_test.rs
