[package]
name = "fast-socks5"
version = "0.6.0"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Fast SOCKS5 client/server implementation written in Rust async/.await (tokio)"
repository = "https://github.com/dizda/fast-socks5"
categories = ["asynchronous", "network-programming", "command-line-utilities", "proxy" ,"authentication" ]
keywords = ["io", "socks5", "proxy", "vpn", "async", "tokio", "socks"]

[dependencies]
log = "0.4"
tokio = { version = "1.17.0", features = ["io-util", "net", "time"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-stream = "0.1.8"

# Dependencies for examples and tests
[dev-dependencies]
env_logger = "0.7"
structopt = "0.3"
tokio = { version = "1.17.0", features = ["io-util", "net", "time", "rt-multi-thread", "macros"] }
tokio-test = "0.4.2"

[[example]]
name = "server"

[[example]]
name = "client"

[[example]]
name = "simple_tcp_server"
