[package]
name = "fast-socks5"
version = "0.8.1"
authors = ["Jonathan Dizdarevic <dizzda@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Fast SOCKS5 client/server implementation written in Rust async/.await (tokio)"
repository = "https://github.com/dizda/fast-socks5"
categories = ["asynchronous", "network-programming", "command-line-utilities" ,"authentication" ]
keywords = ["io", "proxy", "vpn", "async", "socks"]

[features]
default = []
socks4 = []

[dependencies]
log = "0.4"
tokio = { version = "1.20.1", features = ["io-util", "net", "time", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-stream = "0.1.9"

# Dependencies for examples and tests
[dev-dependencies]
env_logger = "0.9"
structopt = "0.3"
tokio = { version = "1.20.1", features = ["io-util", "net", "time", "rt-multi-thread", "macros"] }
tokio-test = "0.4.2"

[[example]]
name = "server"

[[example]]
name = "client"

[[example]]
name = "simple_tcp_server"
